bk_ida/gobmkida/g3/compute_connection_distances
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_connection_distances/src/engine/readconnect.c:1820:44: error: use of undeclared identifier 'xmmword_4B76D0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4B76D0); 
                                           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_connection_distances/src/engine/readconnect.c:1987:13: error: use of undeclared identifier 'dword_785CFC'
v32 = v25 + dword_785CFC[v30]; 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_connection_distances/src/engine/readconnect.c:2238:9: error: use of undeclared identifier 'dword_785CFC'
right = dword_785CFC[v420]; 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/compute_connection_distances/src/obj/1/readconnect.o] Error 1
